Fixed menu not showing up

--- a/wp-content/themes/ninteen-thirty-four/sass/navigation/_menus.scss
+++ b/wp-content/themes/ninteen-thirty-four/sass/navigation/_menus.scss
@@ -134,6 +134,9 @@
   .main-navigation li:nth-child(4) {
     margin-left: #{$width-logo/1.5}px;
   }
+  .main-navigation .primary-menu {
+    display: block;
+  }
   .site-header {
     z-index: 1;
     width: 100%;
@@ -211,19 +214,6 @@ $height_site_header: 45px;
       box-shadow: inset 0 0 100px rgba(255, 255, 255, 0.2);
     }
   }
-}
-@media (max-width: #{$screen-sm-min - 1}) {
-  .mobile-quicklinks li a {
-    padding: #{$height_site_header / 2} 12px;
-  }
-  .menu-toggle {
-    padding-left: 12px;
-    padding-right: 20px;
-  }
-  .custom-logo-link {
-    padding: 10px;
-    width: 90px;
-  }
   .main-navigation .primary-menu {
     background: $color__primary;
     top: $height_site_header;
@@ -245,6 +235,19 @@ $height_site_header: 45px;
      border-bottom: none;
     }
     &:hover { text-align: none; }
+  }
+}
+@media (max-width: #{$screen-sm-min - 1}) {
+  .mobile-quicklinks li a {
+    padding: #{$height_site_header / 2} 12px;
+  }
+  .menu-toggle {
+    padding-left: 12px;
+    padding-right: 20px;
+  }
+  .custom-logo-link {
+    padding: 10px;
+    width: 90px;
   }
 }
 @media (max-width: 370px) {
